# Serenity

./: .gitignore  BUILD  MODULE.bazel  README.md  STYLEGUIDE.md  WORKSPACE
assets/: BUILD
docs/: plan.md
src/: BUILD  PLACEHOLDER.md  game_map.cc  game_map.h  main.cc
src/overworld_generator/: CMakeLists.txt
src/overworld_generator/src/: BUILD  create_map_png.cc  drunkards_walk.cc  drunkward_walk.cc  main.cc  overworld_generator  overworld_generator.cc
src/overworld_generator/src/include/: create_map_png.h  drunkards_walk.h
src/overworld_generator/src/test/: drunkards_walk_test.cc
